feat: complete end-to-end AetherOS slice across all modules
Wire every module from Sentinel down to the NOC dashboard.

Sentinel
- NettyProviderQuery: real wire-level DNS via netty-resolver-dns, one
  DnsNameResolver per provider so each query targets exactly one upstream.
- SingleFlight: coalesces concurrent lookups for the same hostname.
- SentinelMetrics: Micrometer timers + gauges with provider-bounded labels.
- DnsRaceBenchmark: JMH harness comparing CompletableFuture vs Reactor
  racers under deterministic per-provider latency injection.

Nexus
- LaneManager with mutable lane state, EWMA latency/error updates, and
  atomic hot-swap of selection strategy.
- UpstreamConnector that opens NioSocketChannel on the client's event loop
  (preserves channel affinity) and feeds outcomes back to the manager.

Band-Shifter
- TrafficClassifier: port + SNI heuristics, WFQ weights per class.
- Shaper: per-class token buckets sized by WFQ weight from total bps.
- TokenBucketTest covering initial-full and refill semantics.

Chameleon
- ClientHelloPeekHandler: one-shot, read-only, capped at 16 KiB; emits SNI
  and removes itself.
- ClientHelloPeekTest with a hand-rolled synthetic TLS 1.2 ClientHello.

Proxy
- RelayHandler with auto-read backpressure, WritabilityResumer mirror,
  shaper-aware paced writes (rescheduled via the event loop, never block).
- Socks5RequestRouter now performs the full handshake: DNS race -> Nexus
  connect -> SOCKS5 REPLY -> pipeline mutation into relay mode with
  Chameleon peek installed on the client side.
- Socks5RoundTripIT drives an end-to-end CONNECT + echo through the proxy.

Control plane
- AetherProperties + AetherWiring: Spring-based assembly of the whole
  data plane with @PostConstruct/@PreDestroy proxy lifecycle.
- /api/lanes (list + PUT strategy), /api/sentinel (providers + resolve),
  /api/policy (deny lists), /api/diagnostics/health all live and bound.
- Dockerfile (multi-stage Maven -> JRE 21) for container builds.

Frontend (Vite + R